# SIH-Mantrix-RAG

./: .env  README.md  config.py  demo.py  main.py  pyproject.toml  requirements.txt  run_tests.py
data/: colleges_sample.json  dataset.csv  holland-codes.txt  lifespan.txt
data/chroma_db/: chroma.sqlite3
notebook/: ingestion-pipeline.ipynb
src/: __init__.py
src/models/: __init__.py  college.py
src/services/: __init__.py  college_recommendation_service.py  evaluation_service.py  llm_service.py  rag_pipeline.py  verification_service.py
src/ui/: __init__.py  streamlit_app.py
src/utils/: __init__.py
tests/: __init__.py  test_models.py  test_services.py
